--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </tbody>
   </table>
   <hr size="2" noshade />
-  <h3><a href="Hobbies.html">Hobbies</a></h3>
+  <h3><a href="hobbies.html">Hobbies</a></h3>
   <h3><a href="contactme.html">Contact Info</a></h3>
 </body>
 
